jenkins/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: jenkins
  labels:
    purpose: cicd
    app: jenkins
