jenkins/jenkins.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      # securityContext:
      #   fsGroup: 1000
      volumes:
        - name: vol-jenkins
          persistentVolumeClaim:
            claimName: pvc-jenkins
      containers:
      - name: jenkins
        
        securityContext:
          # runAsGroup: 1000
          runAsUser: 0
        image: jenkins/jenkins
        imagePullPolicy: IfNotPresent
        # command:
        # - "/bin/sh"
        # - "-c"
        # - "sudo chmod -R 777 /var/jenkins_home"
        resources:
          limits:
            memory: "2Gi"
            cpu: "1000m"
        volumeMounts:
        - name: vol-jenkins
          mountPath: /var/jenkins_home
        ports:
        - containerPort: 8080
        - containerPort: 50000


---

apiVersion: v1 
kind: Service
metadata: 
  name: svc-jenkins
  namespace: jenkins
spec:
  type: ClusterIP 
  selector:
    app: jenkins
  ports:
  - port: 8080
    name: ui
    targetPort: 8080
  - port: 50000
    name: worker
    targetPort: 50000
